basic note creator

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  
+  <button id="createNote">Create Note</button>
+
+  <div id="notesList"></div>
 </body>
 
 <script src="script.js"></script>
