--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+  <link rel="stylesheet" href="/styles.css">
   <title>Notes</title>
 </head>
 
@@ -13,9 +12,10 @@
   <button id="createNote">Create Note</button>
 
   <div id="notesList"></div>
+  <div id="focusedNote"></div>
 </body>
 
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script src="script.js"></script>
+<script src="/editor.js"></script>
+<script src="/script.js" type="module"></script>
 
 </html>
