added delete note button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <button id="createNote">Create Note</button>
+  <button id="deleteNote">Delete Note</button>
 
   <div id="focusedNote"></div>
   <div id="notesList"></div>
