added fixed top and bottom bars, select note highlighted green

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-  <button id="createNote">Create Note</button>
-  <button id="deleteNote">Delete Note</button>
+  <div id="topbar">
+    <button id="createNote">Create Note</button>
+    <button id="deleteNote">Delete Note</button>
+  </div>
 
   <div id="focusedNote"></div>
+
   <div id="notesList"></div>
 </body>
 
