--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" type="image/png" href="/favicon.png">
-  <title>Notes</title>
+  <title>iNotes</title>
 </head>
 
 <body>
   <div id="topbar">
+    <img id="websiteIcon" src="favicon.png">
+    <span id="websiteTitle">iNotes</span>
     <button id="createNote">Create Note</button>
     <button id="deleteNote">Delete Note</button>
   </div>
