--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="favicon.png">
   <title>iNotes</title>
 </head>
 
@@ -22,7 +22,7 @@
   <div id="notesList"></div>
 </body>
 
-<script src="/editor.js"></script>
-<script src="/script.js" type="module"></script>
+<script src="editor.js"></script>
+<script src="script.js" type="module"></script>
 
 </html>
